melhoramento das classes testes